# ProgettoPCS2025

./: CMakeLists.txt  README.md  main.cpp  main_test.cpp
Debug/: CMakeCache.txt  Cell0Ds.txt  Cell1Ds.txt  Cell2Ds.txt  GeodesicPolyhedra  GeodesicPolyhedra_TEST  Icosaedro_edges.inp  Icosaedro_points.inp  Makefile  Tetraedro_edges.inp  Tetraedro_points.inp  cmake_install.cmake  tetrahedron_edges.inp  tetrahedron_points.inp
Debug/ExportParaview/: Makefile  cmake_install.cmake
Debug/src/: Makefile  cmake_install.cmake
Debug/src_test/: Makefile  cmake_install.cmake
Documentation/: Documentazione.txt
ExportParaview/: UCDUtilities.cpp
Polygon/: Cell3Ds.csv
Release/: CMakeCache.txt  Cell0Ds.txt  Cell1Ds.txt  Cell2Ds.txt  GeodesicPolyhedra  GeodesicPolyhedra_TEST  Icosaedro_edges.inp  Icosaedro_points.inp  Makefile  cmake_install.cmake
Release/ExportParaview/: Makefile  cmake_install.cmake
Release/src/: Makefile  cmake_install.cmake
Release/src_test/: Makefile  cmake_install.cmake
src/: CMakeLists.txt  DataGenerator.cpp  DataGenerator.hpp  Geometry.cpp  Geometry.hpp  Utils.cpp  Utils.hpp
src_test/: CMakeLists.txt  test_datagenerator.hpp  test_geometry.hpp  test_utils.hpp
